--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ SALESPERSON_SURNAME=
 SALESPERSON_EMAIL=
 
 APP_NAME="LSi Samples Site"
+APP_TITLE="${SALESPERSON_FIRSTNAME} ${SALESPERSON_SURNAME}'s ${APP_NAME}"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
