--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=7ac9f62496f2fe477173",
+    "/css/app.css": "/css/app.css?id=b9a2c86e5e3c896ef4f4"
 }
