--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 SALESPERSON_FIRSTNAME=
 SALESPERSON_SURNAME=
 SALESPERSON_EMAIL=
+SALESPERSON_PHONE=
+SALESPERSON_JOBTITLE=
 
 APP_NAME="LSi Samples Site"
 APP_TITLE="${SALESPERSON_FIRSTNAME} ${SALESPERSON_SURNAME}'s ${APP_NAME}"
@@ -38,7 +40,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="${SALESPERSON_EMAIL}"
-MAIL_FROM_NAME="${SALESPERSON_FIRSTNAME} ${SALESPERSON_SURNAME}'s ${APP_NAME}"
+MAIL_FROM_NAME="${SALESPERSON_FIRSTNAME} ${SALESPERSON_SURNAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
